Fix alignment of close button for modal

--- a/src/targets/meandall/styles/views/modals/product-details.less
+++ b/src/targets/meandall/styles/views/modals/product-details.less
@@ -73,7 +73,7 @@
       border-top: 0 none;
     }
     button-close {
-      top: 20.5px;
+      top: 25.5px;
       right: 7.65px;
       line-height: 38px;
       &:before {
